[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/server_connection.gd" type="Script" id=1]
[ext_resource path="res://textures/Bigboy.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 31
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 150
font_data = ExtResource( 2 )

[node name="server_connection" type="Node2D"]
script = ExtResource( 1 )

[node name="connected_devices" type="Node2D" parent="."]
visible = false
position = Vector2( 13.4543, 14.2952 )

[node name="phones" type="VBoxContainer" parent="connected_devices"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="allowed_phones" type="VBoxContainer" parent="connected_devices/phones"]
visible = false
margin_right = 271.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="connected_devices/phones/allowed_phones"]
margin_right = 271.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.145098, 0.976471, 0.976471, 1 )
text = "Connected devices:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="waiting_phones" type="VBoxContainer" parent="connected_devices/phones"]
visible = false
margin_top = 94.0
margin_right = 147.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="connected_devices/phones/waiting_phones"]
margin_right = 147.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.976471, 0.417892, 0.145098, 1 )
text = "Pair Requests:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id" type="VBoxContainer" parent="."]
visible = false
margin_left = 488.849
margin_top = 269.623
margin_right = 771.849
margin_bottom = 439.623
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gameid_text" type="Label" parent="id"]
margin_right = 326.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Game id:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="id_label" type="Label" parent="id"]
margin_top = 85.0
margin_right = 326.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.184314, 0.317647, 0.972549, 1 )
text = "-1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Button" parent="id"]
margin_top = 150.0
margin_right = 326.0
margin_bottom = 170.0
text = "Start"

[node name="status" type="Label" parent="id"]
visible = false
margin_top = 174.0
margin_right = 326.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.972549, 0.164706, 0.164706, 1 )
text = "Cannot start game
No connected devices."
align = 1
valign = 1

[node name="HTTPRequest_start" type="HTTPRequest" parent="id"]

[node name="loading_label" type="Label" parent="."]
margin_left = 360.995
margin_top = 261.573
margin_right = 904.995
margin_bottom = 412.573
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.239216, 0.815686, 0.968627, 1 )
text = "Loading..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="id/start" to="." method="_on_start_pressed"]
[connection signal="request_completed" from="id/HTTPRequest_start" to="." method="_on_start_request_completed"]
